--- a/images/css/style.css
+++ b/images/css/style.css
@@ -129,14 +129,14 @@ section{
     font-size: 5rem;
     text-transform: uppercase;
 }
-.articles .row .content  p{
+.articles .row .content  p1{
     font-size: 1.5rem;
     padding: 1rem 0;
 }
 .articles .row .image{
     flex: 1;
-    width: 50%;
-    height: 50%;
+    width: 70%;
+    height: 70%;
 }
 .articles .row .content, .articles .row .image{
     width: 50%;
@@ -356,114 +356,6 @@ body .login{
     float: right;
   }
 
-  .dashboard{
-    background-color: #ffcdab;
-  }
-  .dashboard .overview-boxes{
-    margin-top: 10%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    padding: 0 20px;
-    margin-bottom: 26px;
-  }
-  .overview-boxes .box{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: calc(100% / 4 - 15px);
-    background: #fff4e3;
-    padding: 15px 14px;
-    border-radius: 12px;
-    box-shadow: 0 5px 10px rgba(0,0,0,0.1);
-  }
-  .overview-boxes .box-topic{
-    font-size: 20px;
-    font-weight: 500;
-  }
-  .dashboard .box .number{
-    display: inline-block;
-    font-size: 35px;
-    margin-top: -6px;
-    font-weight: 500;
-  }
-
-  .sales-boxes{
-    display: flex;
-    justify-content: space-between;
- 
-  }
-  .sales-boxes .recent-sales{
-    width: 65%;
-    background: #fff4e3;
-    padding: 20px 30px;
-    margin: 0 20px;
-    border-radius: 12px;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-  }
-
-  .sales-boxes .sales-details{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
-  }
-  .sales-boxes .box .title{
-    font-size: 24px;
-    font-weight: 500;
-  }
-  .sales-boxes .sales-details li.topic{
-    font-size: 20px;
-    font-weight: 500;
-  }
-  .sales-boxes .sales-details li{
-    list-style: none;
-    margin: 8px 0;
-    flex:1;
-  }
-  .sales-boxes .sales-details li a{
-    font-size: 18px;
-    color: #5d5d5a;
-    font-size: 400;
-    text-decoration: none;
-
-  }
-  .sales-boxes .box .button{
-    width: 100%;
-    display: flex;
-    justify-content: flex-end;
-  }
-  .sales-boxes .box .button a{
-    color: #5d5d5a;
-    background: #ffa45c;
-    padding: 4px 12px;
-    font-size: 15px;
-    font-weight: 400;
-    border-radius: 4px;
-    text-decoration: none;
-    transition: all 0.3s ease;
-    border: solid #ffa45c;
-  }
-  .sales-boxes .box .button a:hover{
-    background:  #fff4e3;
-  }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -480,10 +372,6 @@ body .login{
 }
 
 @media(max-width:1000px){
-    .dashboard-content .boxes .box{
-        width: calc(100% / 2 - 15px);
-        margin-top: 15px;
-    }
     #menu-btn{
         display: inline-block;
     }
@@ -504,9 +392,6 @@ body .login{
         padding: 0.25rem;
         font-size: 2rem;
 
-    }
-    .content{
-        grid-template-columns: 1fr;
     }
     .aboutas .content {
         grid-template-columns: repeat(1, 1fr);
